# CLIGenix

./: Dockerfile  README.md  pyproject.toml
cligenix/: __main__.py  cli.py  llm.py
notebooks/: 1.0-testing-api-key.ipynb
tests/: test.py  test_cli.py
