[tool.poetry]
name = "cligenix"
version = "0.1.0"
description = "A CLI tool to generate commands using LLMs"
authors = ["Anshuman Jena <anshujena007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.6"
typer = "^0.12.5"
numpy = "^2.3.3"
langchain-ollama = "^0.3.8"
urllib3 = "1.26.18"
python-dotenv = "^1.1.1"

[tool.poetry.scripts]
cligenix = "cligenix.cli:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
